# pickli

./: manage.py  pyproject.toml
pickli/: asgi.py  settings.py  urls.py  wsgi.py
wiki/: forms.py  models.py  urls.py  views.py
wiki/migrations/: 0001_initial.py
wiki/templates/: _sidebar.html  index.html  layout.html
