[tool.poetry]
name = "pickli"
version = "0.1.0"
description = ""
authors = ["Mateusz Przybyłowicz <mateusz.przybylowicz@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
